use object libraries to avoid needless recompilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,23 +15,28 @@ pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 pkg_check_modules(GLIB REQUIRED glib-2.0)
 pkg_check_modules(GIO REQUIRED gio-2.0)
 
+include_directories(${GLIB_INCLUDE_DIRS})
+link_libraries(${GLIB_LIBRARIES})
+
 find_package(LibXml2 REQUIRED)
 find_package(CURL REQUIRED)
 
-add_executable(test_deser test/deser.c deser.c muxdata.c)
-target_link_libraries(test_deser ${GLIB_LIBRARIES})
-target_include_directories(test_deser PRIVATE ${GLIB_INCLUDE_DIRS})
+add_library(deser OBJECT deser.c muxdata.c)
 
-add_executable(test_html2xml test/html2xml.c deser.c muxdata.c parser.c)
-target_link_libraries(test_html2xml ${GLIB_LIBRARIES} ${LIBXML2_LIBRARIES})
-target_compile_definitions(test_html2xml PRIVATE ${LIBXML2_DEFINITIONS})
-target_include_directories(test_html2xml
-    PRIVATE ${GLIB_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS})
+add_library(parser OBJECT parser.c)
+target_link_libraries(parser ${LIBXML2_LIBRARIES})
+target_compile_definitions(parser PUBLIC ${LIBXML2_DEFINITIONS})
+target_include_directories(parser PUBLIC ${LIBXML2_INCLUDE_DIRS})
 
-add_executable(get-pl-mux main.c arguments.c fetch.c parser.c muxdata.c deser.c)
+add_executable(test_deser test/deser.c)
+target_link_libraries(test_deser deser)
+
+add_executable(test_html2xml test/html2xml.c)
+target_link_libraries(test_html2xml deser parser)
+
+add_executable(get-pl-mux main.c arguments.c fetch.c)
 target_compile_options(get-pl-mux PRIVATE ${GSTREAMER_CFLAGS_OTHER})
-target_compile_definitions(get-pl-mux PRIVATE ${LIBXML2_DEFINITIONS})
-target_link_libraries(get-pl-mux ${GSTREAMER_LIBRARIES} ${LIBXML2_LIBRARIES}
+target_link_libraries(get-pl-mux parser deser ${GSTREAMER_LIBRARIES}
     ${CURL_LIBRARIES} ${GIO_LIBRARIES})
 target_include_directories(get-pl-mux PRIVATE ${GSTREAMER_INCLUDE_DIRS}
-    ${LIBXML2_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${GIO_INCLUDE_DIRS})
+    ${CURL_INCLUDE_DIRS} ${GIO_INCLUDE_DIRS})
